# gafw-tools

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/CPPParameters/: AllValues.h  AngleQuantity.cpp  AngleQuantity.h  CPPParams.cpp  CPPParams.h  FrequencyQuantity.cpp  FrequencyQuantity.h  InfoQuantity.cpp  InfoQuantity.h  ListValue.cpp  ListValue.h  Parameter.cpp  Parameter.h  ParameterData.h  ParameterName.cpp  ParameterName.h  ParameterRegistry.cpp  ParameterRegistry.h  SimpleDimensionedValue.h  SimpleValue.cpp  SimpleValue.h  TimeQuantity.cpp  TimeQuantity.h  Value.h  VaryingValueType.cpp  VaryingValueType.h  VectorValue.h  test.cpp
code/common/: CommonException.cpp  CommonException.h
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
