cmake_minimum_required (VERSION 2.6) 
project (gafw-tools)
find_package(Boost 1.53 REQUIRED COMPONENTS regex)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(CPPParameters)
FILE(GLOB CppSources CPPParameters/*.cpp)
FILE(GLOB HeaderFiles CPPParameters/*.h)
add_library(gafw-tools SHARED ${CppSources} )
target_link_libraries(gafw-tools ${Boost_LIBRARIES})
install(TARGETS gafw-tools LIBRARY DESTINATION lib)
install(FILES ${HeaderFiles} DESTINATION "include/CPPParameters")

#add_executable(testing ${CppSources} )
#target_link_libraries(testing gafw-tools ${Boost_LIBRARIES}) 