cmake_minimum_required (VERSION 2.6) 
project (gafw-tools)
find_package(Boost 1.53 REQUIRED COMPONENTS regex)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(. common CPPParameters)
FILE(GLOB CppSources common/*.cpp CPPParameters/*.cpp )
FILE(GLOB CommonHeaderFiles common/*.h)
FILE(GLOB CPPParametersHeaderFiles CPPParameters/*.h)
add_library(gafw-tools SHARED ${CppSources} )
target_link_libraries(gafw-tools ${Boost_LIBRARIES})
install(TARGETS gafw-tools LIBRARY DESTINATION lib)
install(FILES ${CommonHeaderFiles} DESTINATION "include/common")
install(FILES ${CPPParametersHeaderFiles} DESTINATION "include/CPPParameters")

#add_executable(testing ${CppSources} )
#target_link_libraries(testing gafw-tools ${Boost_LIBRARIES}) 